--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <div class="container-fluid">
       <div class="header_top row">
-        <div class="col-lg-offset-2 col-lg-3 col-xs-offset-1 col-xs-3 col-sm-offset-2 col-sm-3">
+        <div class="col-lg-offset-1 col-lg-4 col-xs-offset-1 col-xs-4 col-sm-offset-1 col-sm-4">
           <p id="title">start bootstrap</p>
         </div>
-        <div class="col-lg-offset-4 col-lg-3 col-xs-offset-6 col-xs-2 col-sm-offset-4 col-sm-3">
+        <div class="col-lg-offset-4 col-lg-3 col-xs-offset-5 col-xs-2 col-sm-offset-4 col-sm-3">
           <nav>
             <ul class="visual_none">
               <a href="#"><li>portfolio</li></a>
@@ -61,33 +61,51 @@
         <div class="col-lg-offset-1 col-lg-10 col-xs-12 col-sm-offset-1 col-sm-10">
           <div class="portfolio row">
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-5">
-              <div class="images_portfolio">
-                <img src="img/cabin.png" alt="">
+              <div class="item_portfolio">
+                <div class="layover_">
+                  <i class="fas fa-plus"></i>
+                  <img src="img/cabin.png" alt="">
+                </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
-              <div class="images_portfolio">
-                <img src="img/cake.png" alt="">
+              <div class="item_portfolio">
+                <div class="layover_">
+                  <i class="fas fa-plus"></i>
+                  <img src="img/cake.png" alt="">
+                </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-5">
-              <div class="images_portfolio">
-                <img src="img/circus.png" alt="">
+              <div class="item_portfolio">
+                <div class="layover_">
+                  <i class="fas fa-plus"></i>
+                  <img src="img/circus.png" alt="">
+                </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
-              <div class="images_portfolio">
-                <img src="img/game.png" alt="">
+              <div class="item_portfolio">
+                <div class="layover_">
+                  <i class="fas fa-plus"></i>
+                  <img src="img/game.png" alt="">
+                </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-5">
-              <div class="images_portfolio">
-                <img src="img/safe.png" alt="">
+              <div class="item_portfolio">
+                <div class="layover_">
+                  <i class="fas fa-plus"></i>
+                  <img src="img/safe.png" alt="">
+                </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
-              <div class="images_portfolio">
-                <img src="img/submarine.png" alt="">
+              <div class="item_portfolio">
+                <div class="layover_">
+                  <i class="fas fa-plus"></i>
+                  <img src="img/submarine.png" alt="">
+                </div>
               </div>
             </div>
           </div>
@@ -114,13 +132,11 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-offset-5 col-sm-offset-5 col-lg-offset-5 col-xs-2 col-sm-2 col-lg-2">
-          <a href="#">
-            <div id="btn_section">
-              <i class="fas fa-download"></i>
-              <p>Download</p>
-            </div>
-          </a>
+        <div class="col-lg-12 col-sm-12 col-xs-12 text-center">
+          <button type="button" class="bt_sb btn-lg btn-sm">
+            <i class="fas fa-download"></i>
+            Download
+          </button>
         </div>
       </div>
       <div class="contact row">
@@ -140,19 +156,34 @@
             <input class="text_" type="email" name="" value="">
             <p>Phone Number</p>
             <input class="text_" type="text" name="" value="">
-            <p id="spacing_">Message</p>
-            <input class="text_" type="text" name="" value="">
+            <div class="contact_">
+              <textarea class="form-control message_" rows="7" placeholder="Message"></textarea>
+            </div>
             <a href="#"><div id="btn_contact">Send</div></a>
           </form>
         </div>
       </div>
-      <div class="footer_top row">
-        <div class="white col-lg-offset-2 col-lg-2 col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-2"></div>
-        <div class="red col-lg-offset-1 col-lg-2 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-2"></div>
-        <div class="white col-lg-offset-1 col-lg-2 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-2"></div>
+      <div class="footer_top row text-center">
+        <div class="col-lg-offset-2 col-lg-2 col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-2">
+          <h5 class="title_three">location</h5>
+          <p class="w_color">2215 John Daniel Drive Clark, MO 54243</p>
+        </div>
+        <div class="col-lg-4 col-xs-12 col-sm-4">
+          <h5 class="title_three">around the web</h5>
+          <a href="#"><div class="round_social"><i class="fab fa-facebook"></i></div></a>
+          <a href="#"><div class="round_social"><i class="fab fa-instagram"></i></div></a>
+          <a href="#"><div class="round_social"><i class="fab fa-google-plus-g"></i></div></a>
+          <a href="#"><div class="round_social"><i class="fab fa-linkedin-in"></i></div></a>
+        </div>
+        <div class="col-lg-2 col-xs-12 col-sm-2">
+          <h5 class="title_three">about freelancer</h5>
+          <p class="w_color">Freelance is a free to use, open source Bootstrap theme created by <strong>Start Bootstrap<strong> </p>
+        </div>
       </div>
-      <div class="footer_bottom row">
-        <div class="white col-lg-offset-5 col-lg-2 col-xs-offset-3 col-xs-6 col-sm-offset-5 col-sm-2"></div>
+      <div class="footer_bottom row text-center">
+        <div class="col-lg-offset-5 col-lg-2 col-xs-offset-3 col-xs-6 col-sm-offset-5 col-sm-2">
+          <p>Copyright © Your Website 2019</p>
+        </div>
       </div>
     </div>
   </body>
