--- a/index.html
+++ b/index.html
@@ -62,49 +62,49 @@
           <div class="portfolio row">
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-5">
               <div class="item_portfolio">
-                <div class="layover_">
+                <img src="img/cabin.png" alt="">
+                <div class="layover">
                   <i class="fas fa-plus"></i>
-                  <img src="img/cabin.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
               <div class="item_portfolio">
-                <div class="layover_">
+                <img src="img/cake.png" alt="">
+                <div class="layover">
                   <i class="fas fa-plus"></i>
-                  <img src="img/cake.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-5">
               <div class="item_portfolio">
-                <div class="layover_">
+                <img src="img/circus.png" alt="">
+                <div class="layover">
                   <i class="fas fa-plus"></i>
-                  <img src="img/circus.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
               <div class="item_portfolio">
-                <div class="layover_">
+                <img src="img/game.png" alt="">
+                <div class="layover">
                   <i class="fas fa-plus"></i>
-                  <img src="img/game.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-5">
               <div class="item_portfolio">
-                <div class="layover_">
+                <img src="img/safe.png" alt="">
+                <div class="layover">
                   <i class="fas fa-plus"></i>
-                  <img src="img/safe.png" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-offset-0 col-lg-4 col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
               <div class="item_portfolio">
-                <div class="layover_">
+                <img src="img/submarine.png" alt="">
+                <div class="layover">
                   <i class="fas fa-plus"></i>
-                  <img src="img/submarine.png" alt="">
                 </div>
               </div>
             </div>
